Raven.A1
Hardware and software binary release

20250215
  software: added uiptools for NE2000 ISA cards

20250208
  rom:      hi-speed serial now usable in TOS as bios device 7
  tools:    added serial.cpx for configurating serial ports

20250123
  drivers:  Aims FM-Radio ISA card

20250119
  drivers:  OPL midi driver

20250107
  rom:      ROM disk support for utilities

20241230
  rom:      fixed bug in cookie set command
  devel:    small isa library can work even without ISA_BIOS
            to a limited degree and on regonised platforms

20241229
  drivers:  MPU401 driver

20241226
  rom:      added tos cookie commands
  rom:      monitor input/output redirection
  software: added raven/mon.tos (requires rom >= 20241226)
  software: added 3rdparty autoexec
  software: added 3rdparty setenv
  software: added 3rdparty setflags
  software: moved 3rdparty autosort into own folder

20241225
  rvbios:   use standard Atari colors
  rvbios:   reset after certain changes
  rvbios:   cpu page memory settings
  rvbios:   check rom version on startup
  rom:      faster vga init
  rvnova:   fixed memory overwrite
  isa_bios: built with purec
  ultrinit: built with purec

20241216
  Updated pgusinit from latest v2.2.0 sources

20241215
  Improved x86 bios emulation, S3 86C801 card now works.

20241210
  Basic mono vga mode is now intiialized by
  the Raven bios instead of EmuTOS.
  Should work on all/most types of VGA cards.

20241202
  software: added FPU emulator 'fpemu.prg'
  software: added ISA_BIOS and example config file
  rvbios:   fixed GUI glitches on nvram page
  rvbios:   fixed SP060 issue
  monitor:  config system and storing settings to nvram

20241124
  monitor: selftest is now a loadable s19 program

20241120
  nova: added 1280x720 resolutions where possible
  nova: added  320x200 resolutions where possible

20241115
 software: first pass of software support package
 monitor: COM1 default to 115200 baud
 monitor: new command 'a' for disassembly
 
20241110