@@ -1,0 +1,13 @@
+flash.tos
+.S[-4 -S]
+.C[-E1 -M -P -Z -W2]
+.C[-I..\..\purec\include]
+.C[-I..\..\lib]
+.L[-V]
+=
+..\..\purec\lib\cstartn.o
+main.c
+flash.c
+asm.s
+..\..\purec\lib\pctoslib.lib
+..\..\purec\lib\pcstdlib.lib
