@@ -1,0 +1,13 @@
+
+NAME = flash
+
+BIN = $(NAME).tos
+PRJ = $(NAME).prj
+
+INSTALL_ROOT = c:/raven
+INSTALL_BINS = $(BIN)
+
+OBJS = main.o flash.o ASM.O
+
+ROOTDIR = ../..
+include $(ROOTDIR)/Makefile.cmn
